// biome-ignore-all lint:
import type { GetLastTenSales200LastSalesItem } from './getLastTenSales200LastSalesItem'

export type GetLastTenSales200 = {
  lastSales: GetLastTenSales200LastSalesItem[]
}
