...

  const { data, isLoading } = useSuggestionProductsForCustomer(Number(id))

  return (
    <Pressable style={s.overlay} onPress={() => router.back()}>
      <Pressable style={s.modal} onPress={e => e.stopPropagation()}>
        <Text style={s.title}>Sugestão de produtos para o cliente:</Text>

        <View style={s.suggestionContainer}>
          {isLoading ? (
            <View style={{ height: 100 }}>
              <Loading />
            </View>
...
              <Text style={s.error}>Não há sugestões para esse cliente</Text>
            </View>
          )}
        </View>

        <Pressable style={s.close} onPress={() => router.back()}>
          <Text style={s.closeText}>Fechar</Text>
        </Pressable>
      </Pressable>
    </Pressable>
  )
}

...
