appId: host.exp.exponent
env:
  EMAIL: "admin@kodiak.com"
  SENHA: "Admin@33"

---
- launchApp
- tapOn: "ksm"
- assertVisible: "ksm"
- assertVisible: "Login"
- tapOn: "Entrar"
- assertVisible: "Todos os campos devem ser preenchidos"
- tapOn: "E-mail..."
- inputText: "${EMAIL}"
- tapOn: "Entrar"
- assertVisible: "Todos os campos devem ser preenchidos"
- tapOn: "Senha..."
- inputText: "123"
- tapOn: "Entrar"
- assertVisible: "Credenciais inválidas"
- tapOn: "Senha..."
- eraseText
- inputText: "${SENHA}"
- tapOn: "Entrar"
- assertVisible: "Bem-vindo, Admin"
- assertVisible: "Clientes com chance de comprar hoje:"
